Sec 3:27-Add Model to Db

--- a/BookListRazor/appsettings.json
+++ b/BookListRazor/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "DefaultConnection": "Server=DESKTOP-8R4KO1V;Database=BookListRazor;TrustedConnection=True;MultipleActiveResultSets=True"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-8R4KO1V;Database=BookListRazor;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
